[package]
name = "olympus-crypto"
version = "0.1.0"
edition = "2021"
description = "Shared Olympus protocol crypto primitives"
license = "Apache-2.0"

[features]
# Pull in BN254 Poseidon for ZK-circuit commitment computation (e.g. redaction).
poseidon = ["dep:ark-bn254", "dep:ark-ff", "dep:num-bigint"]
# Canonical JSON (JCS / RFC 8785 + Olympus Decimal rules) for SBT commit digests.
canonical = ["dep:unicode-normalization"]
# Sparse Merkle Forest: per-shard 256-height SMT + existence/non-existence proofs.
smt = ["dep:serde"]
# Relying-party verification of the signed Poseidon ledger snapshot (zk::snapshot).
snapshot = ["poseidon", "dep:serde", "dep:ed25519-dalek"]

[dependencies]
blake3 = "1"
hex = "0.4"
thiserror = "2"

# Optional heavy deps — only compiled when the `poseidon` feature is enabled.
# Pinned to match the workspace root Cargo.toml ark versions.
ark-bn254    = { version = "=0.6.0", optional = true }
ark-ff       = { version = "=0.6.0", optional = true }
num-bigint   = { version = "0.4",    optional = true }
# Unicode NFC normalization for canonical JSON (matches src/canonical.rs + the
# JS/Python reference implementations). Only compiled with the `canonical` feature.
unicode-normalization = { version = "0.1", optional = true }
# Serde derive for SMT / snapshot proof (de)serialization.
serde = { version = "1", features = ["derive"], optional = true }
# Ed25519 verification for signed ledger snapshots. Only with the `snapshot` feature.
ed25519-dalek = { version = "2", optional = true }

[dev-dependencies]
# Cross-implementation Poseidon parity test (R6-M1): light-poseidon is the
# implementation src-tauri's ZK layer uses; this crate's hand-rolled
# `poseidon_hash` must agree with it byte-for-byte or the host generates
# witnesses the circuit rejects. Dev-only; the test is gated behind `poseidon`.
light-poseidon = { path = "../light-poseidon" }
