[package]
name = "olympus-crypto"
version = "0.1.0"
edition = "2021"
description = "Shared Olympus protocol crypto primitives"
license = "Apache-2.0"

[features]
# Pull in BN254 Poseidon for ZK-circuit commitment computation (e.g. redaction).
poseidon = ["dep:ark-bn254", "dep:ark-ff", "dep:num-bigint"]
# Canonical JSON (JCS / RFC 8785 + Olympus Decimal rules) for SBT commit digests.
canonical = ["dep:unicode-normalization"]
# Sparse Merkle Forest: per-shard 256-height SMT + existence/non-existence proofs.
smt = ["dep:serde"]
# Relying-party verification of the signed Poseidon ledger snapshot (zk::snapshot).
# Uses BJJ EdDSA-Poseidon (the same authority key Olympus uses for SBTs and
# federation checkpoints), not Ed25519, so a single trust anchor verifies all
# internal ledger state.
snapshot = ["poseidon", "dep:serde", "dep:babyjubjub-rs", "dep:ff_ce", "dep:num-bigint"]

[dependencies]
blake3 = "1"
hex = "0.4"
thiserror = "2"

# Optional heavy deps — only compiled when the `poseidon` feature is enabled.
# Pinned to match the workspace root Cargo.toml ark versions.
ark-bn254    = { version = "=0.6.0", optional = true }
ark-ff       = { version = "=0.6.0", optional = true }
num-bigint   = { version = "0.4",    optional = true }
# Unicode NFC normalization for canonical JSON (matches src/canonical.rs + the
# JS/Python reference implementations). Only compiled with the `canonical` feature.
unicode-normalization = { version = "0.1", optional = true }
# Serde derive for SMT / snapshot proof (de)serialization.
serde = { version = "1", features = ["derive"], optional = true }
# BJJ EdDSA-Poseidon verification for signed ledger snapshots. Only with the
# `snapshot` feature. Pinned to the same version src-tauri uses so signer and
# verifier share scalar derivation + signature shape exactly.
babyjubjub-rs = { version = "0.0.11", optional = true }
# `ff_ce::PrimeField::from_str` is the only way to construct a
# `babyjubjub_rs::Fr` from a decimal string. Same crate the desktop side
# uses so signer and verifier agree on the conversion path.
ff_ce = { version = "0.11", optional = true }
# Legacy Ed25519 dep retained for old anchoring receipt verifiers; the
# snapshot verifier no longer needs it.
ed25519-dalek = { version = "2", optional = true }

[dev-dependencies]
# Cross-implementation Poseidon parity test (R6-M1): light-poseidon is the
# implementation src-tauri's ZK layer uses; this crate's hand-rolled
# `poseidon_hash` must agree with it byte-for-byte or the host generates
# witnesses the circuit rejects. Dev-only; the test is gated behind `poseidon`.
light-poseidon = { path = "../light-poseidon" }
# Phase 4-prep e2e gate: a snapshot signed by the NEW permissive signer must
# verify through THIS crate's `verify_snapshot` (which still calls
# babyjubjub-rs pre-swap). Proves the new signer's output is accepted by the
# live verifier before Phase 4 swaps the verifier itself. Dev-only.
babyjubjub-permissive = { path = "../babyjubjub-permissive" }
ark-bn254 = "=0.6.0"
ark-ff = "=0.6.0"
