[package]
name = "olympus-crypto"
version = "0.1.0"
edition = "2021"
description = "Shared Olympus protocol crypto primitives"
license = "Apache-2.0"
# Internal workspace crate — never published to crates.io. Required so
# `cargo deny`'s bans check exempts the workspace's versionless path
# dependencies on it (allow-wildcard-paths only applies to unpublishable
# target crates).
publish = false

[features]
# Pull in BN254 Poseidon for ZK-circuit commitment computation (e.g. redaction).
poseidon = ["dep:ark-bn254", "dep:ark-ff", "dep:num-bigint"]
# Canonical JSON (JCS / RFC 8785 + Olympus Decimal rules) for SBT commit digests.
canonical = ["dep:unicode-normalization"]
# Sparse Merkle Forest: per-shard 256-height SMT + existence/non-existence proofs.
smt = ["dep:serde"]
# Relying-party verification of the signed Poseidon ledger snapshot (zk::snapshot).
# Uses BJJ EdDSA-Poseidon (the same authority key Olympus uses for SBTs and
# federation checkpoints), not Ed25519, so a single trust anchor verifies all
# internal ledger state.
snapshot = ["poseidon", "dep:serde", "dep:babyjubjub-permissive"]
# Object-level redaction hiding-leaf commitment (ADR-0025/0026): Pedersen on
# Baby Jubjub + Poseidon leaf. Shared by the in-process prover and both offline
# verifiers so the leaf computation has one source of truth.
redaction = ["poseidon", "dep:babyjubjub-permissive"]

[dependencies]
blake3 = "1"
hex = "0.4"
thiserror = "2"

# Optional heavy deps — only compiled when the `poseidon` feature is enabled.
# Pinned to match the workspace root Cargo.toml ark versions.
ark-bn254    = { version = "=0.6.0", optional = true }
ark-ff       = { version = "=0.6.0", optional = true }
num-bigint   = { version = "0.4",    optional = true }
# Unicode NFC normalization for canonical JSON (matches src/canonical.rs + the
# JS/Python reference implementations). Only compiled with the `canonical` feature.
unicode-normalization = { version = "0.1", optional = true }
# Serde derive for SMT / snapshot proof (de)serialization.
serde = { version = "1", features = ["derive"], optional = true }
# BJJ EdDSA-Poseidon verification for signed ledger snapshots. Only with the
# `snapshot` feature. The in-repo, permissively licensed (Apache-2.0)
# circomlib-compatible implementation — byte-for-byte compatible with the
# iden3 reference, and the same crate src-tauri's signer uses, so signer and
# verifier share scalar derivation + signature shape exactly. Replaced
# `babyjubjub-rs` (transitive GPL-3.0 `poseidon-rs`); its point coordinates
# are `ark_bn254::Fr`, so no iden3↔arkworks field bridge is needed.
babyjubjub-permissive = { path = "../babyjubjub-permissive", optional = true }

# Examples import the feature-gated `smt` module. Declaring `required-features`
# keeps them out of a default `cargo test --workspace` / `--all-targets` build
# (which would otherwise fail to resolve `olympus_crypto::smt`) while still
# building under `--features smt` / `--all-features`.
[[example]]
name = "gen_ssmf_vectors"
required-features = ["smt"]

[[example]]
name = "smt_benchmark"
required-features = ["smt"]

[dev-dependencies]
# Cross-implementation Poseidon parity test (R6-M1): light-poseidon is the
# implementation src-tauri's ZK layer uses; this crate's hand-rolled
# `poseidon_hash` must agree with it byte-for-byte or the host generates
# witnesses the circuit rejects. Dev-only; the test is gated behind `poseidon`.
light-poseidon = { path = "../light-poseidon" }
ark-bn254 = "=0.6.0"
ark-ff = "=0.6.0"
# Parse crates/light-poseidon/bn254_x5_seed.json in the seed-reproducibility
# test (seed_reproduces_light_poseidon_parameters). Dev-only.
serde_json = "1"
