[package]
name = "olympus-manifest"
version = "0.1.0"
edition = "2021"
description = "Olympus dataset-manifest schema, Merkle commitment, and inclusion/exclusion/version-link proofs (ADR-0027)"
license = "Apache-2.0"
repository = "https://github.com/OlympusLedgerOrg/Olympus"
keywords = ["cryptography", "merkle", "blake3", "dataset", "provenance"]
# Internal workspace crate; the customer-facing surface is re-exported through
# the `clients/cli` binary and the Python SDK. Kept unpublished so `cargo deny`
# exempts its versionless path dep on `olympus-crypto`.
publish = false

[features]
default = ["canonical"]
# JCS / RFC 8785 canonical serialization of a manifest so its committed
# content-hash is reproducible across implementations. On by default — the whole
# point of the manifest is a byte-stable commitment.
canonical = ["olympus-crypto/canonical"]

[dependencies]
# Domain-separated leaf/node hashing lives in olympus-crypto (ADR-0005/0027) so
# the manifest commitment stays parity-compatible with the cross-language
# verifiers. Never redefine the domain prefixes here.
olympus-crypto = { path = "../olympus-crypto", features = ["smt"] }
blake3 = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
serde_json = "1"
