[package]
name = "cdhs-smf-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "cdhs_smf_service"
path = "src/lib.rs"

[[bin]]
name = "cdhs-smf-service"
path = "src/main.rs"

[dependencies]
# gRPC/Protobuf
tonic = "0.10"
prost = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }

# Cryptography
blake3 = "1.8"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
zeroize = "1.7"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
base64 = "0.21"

# Unicode normalization for canonicalization
unicode-normalization = "0.1"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
hex = "0.4"
