[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ingest-parser"
version = "1.0.0"
description = "Deterministic document extraction microservice for Olympus"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "Apache-2.0"
authors = [
    {name = "Olympus Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies - minimal for deterministic CPU execution
dependencies = [
    # Web framework
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0; platform_system != 'Windows'",
    "uvicorn>=0.27.0,<1.0.0; platform_system == 'Windows'",
    # CVE fix: >= 0.0.22 required for Arbitrary File Write fix
    "python-multipart>=0.0.22,<1.0.0",
    # CVE fix: >= 0.49.1 required for O(n^2) DoS via Range header fix
    "starlette>=0.49.1,<1.0.0",
    # CVE fix: >= 0.16.0 required for malformed Chunked-Encoding fix
    "h11>=0.16.0,<1.0.0",
    
    # Cryptographic hashing
    "blake3>=0.4.0,<2.0.0",
    
    # Schema validation
    "pydantic>=2.5.0,<3.0.0",
    
    # PDF processing (lightweight, no ML)
    "pikepdf>=8.0.0,<12.0.0",
]

[project.optional-dependencies]
# Full ML-based extraction (Docling)
docling = [
    "docling>=2.0.0,<3.0.0",
    # Docling's dependencies will be pulled in automatically
]

# Alternative: Marker for scientific papers
marker = [
    "marker-pdf>=0.2.0,<1.0.0",
]

# OCR support (Surya)
ocr = [
    "surya-ocr>=0.4.0,<1.0.0",
]

# Development dependencies
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "ruff>=0.3.0,<1.0.0",
    "mypy>=1.8.0,<2.0.0",
]

[project.scripts]
ingest-parser = "ingest_parser.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["ingest_parser*"]

[tool.ruff]
target-version = "py310"
line-length = 100
respect-gitignore = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["ingest_parser"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["blake3.*", "pikepdf.*", "docling.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
