[package]
name = "olympus-verifier"
version = "0.1.0"
edition = "2021"
authors = ["Olympus Contributors"]
license = "Apache-2.0"
description = "High-performance Rust verifier for Olympus commitments"
repository = "https://github.com/OlympusLedgerOrg/Olympus"
keywords = ["cryptography", "merkle", "blake3", "verification"]

[dependencies]
blake3 = "1.8"
hex = "0.4"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "verification"
harness = false
